kubernetes/stripprefix.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vitubot-stripprefix
  namespace: vitu
spec:
  stripPrefix:
    prefixes:
      - /vitubot
