kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vitubot
  namespace: vitu
spec:
  selector:
    app: vitubot
  ports:
    - port: 8000
