kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vitubot
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd,default-vitubot-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: k3s.quokka.ninja
    http:
      paths:
      - path: /vitubot
        pathType: Prefix
        backend:
          service:
            name: vitubot
            port:
              number: 8000
